Fixed chat service. Code cleanup.